# gitoxide

./: CHANGELOG.md  COLLABORATING.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
gitoxide-core/: Cargo.toml
gix-actor/: Cargo.toml
gix-actor/fuzz/fuzz_targets/: actors.rs
gix-actor/src/: identity.rs  lib.rs
gix-actor/src/signature/: decode.rs  mod.rs
gix-actor/tests/actor/: identity.rs  signature.rs
gix-archive/: CHANGELOG.md  Cargo.toml
gix-attributes/: CHANGELOG.md  Cargo.toml
gix-bitmap/: Cargo.toml
gix-blame/: CHANGELOG.md  Cargo.toml
gix-blame/tests/: blame.rs
gix-blame/tests/fixtures/generated-archives/: .gitignore  make_blame_rename_tracking_repo_sha256.tar  make_blame_two_roots_repo_sha256.tar
gix-chunk/: Cargo.toml
gix-command/: CHANGELOG.md  Cargo.toml
gix-commitgraph/: CHANGELOG.md  Cargo.toml
gix-config/: Cargo.toml
gix-config-value/: CHANGELOG.md  Cargo.toml
gix-config/fuzz/artifacts/fuzz_file/: crash-c4cbe6c3aa15981778a7b4015f121193b0514fe7  slow-unit-1faaea6c3bac5acd7cfcf8ece15ebd49d9cab6fb
gix-config/src/: lib.rs  types.rs
gix-config/src/file/mutable/: mod.rs
gix-config/src/parse/: events.rs  mod.rs  tests.rs
gix-config/src/parse/from_bytes/: mod.rs  tests.rs
gix-config/tests/config/file/: mod.rs
gix-config/tests/config/file/access/raw/: raw_value.rs  set_existing_raw_value.rs
gix-credentials/: CHANGELOG.md  Cargo.toml
gix-date/: CHANGELOG.md  Cargo.toml
gix-diff/: CHANGELOG.md  Cargo.toml
gix-diff/src/tree/: function.rs
gix-diff/tests/diff/: index.rs  main.rs  tree.rs
gix-diff/tests/diff/blob/: platform.rs
gix-diff/tests/diff/rewrites/: mod.rs  tracker.rs
gix-dir/: CHANGELOG.md  Cargo.toml
gix-discover/: CHANGELOG.md  Cargo.toml
gix-error/: Cargo.toml
gix-error/src/concrete/: validate.rs
gix-error/tests/error/: error.rs
gix-features/: Cargo.toml
gix-filter/: CHANGELOG.md  Cargo.toml
gix-fs/: CHANGELOG.md  Cargo.toml
gix-fsck/: CHANGELOG.md  Cargo.toml
gix-glob/: CHANGELOG.md  Cargo.toml
gix-glob/benches/: wildmatch.rs
gix-glob/tests/pattern/: matching.rs
gix-hash/: CHANGELOG.md  Cargo.toml
gix-hashtable/: CHANGELOG.md  Cargo.toml
gix-ignore/: CHANGELOG.md  Cargo.toml
gix-imara-diff/: CHANGELOG.md  Cargo.toml
gix-imara-diff/src/: myers.rs  sources.rs
gix-imara-diff/src/myers/: middle_snake.rs  preprocess.rs
gix-imara-diff/tests/integration/: main.rs
gix-index/: CHANGELOG.md  Cargo.toml
gix-index/src/: lib.rs
gix-index/src/access/: mod.rs
gix-lock/: CHANGELOG.md  Cargo.toml
gix-mailmap/: Cargo.toml
gix-mailmap/fuzz/fuzz_targets/: mailmap.rs
gix-mailmap/src/: lib.rs
gix-merge/: CHANGELOG.md  Cargo.toml
gix-merge/fuzz/fuzz_targets/: blob.rs
gix-merge/tests/merge/blob/: builtin_driver.rs
gix-negotiate/: CHANGELOG.md  Cargo.toml
gix-object/: Cargo.toml
gix-object/benches/: decode_objects.rs
gix-object/fuzz/artifacts/fuzz_commit/: crash-db642036f9f911db1d84a0afa9f08245a2a9439d
gix-object/fuzz/fuzz_targets/: fuzz_commit.rs  fuzz_tag.rs
gix-object/src/: data.rs  lib.rs  parse.rs
gix-object/src/commit/: decode.rs  mod.rs  ref_iter.rs
gix-object/src/commit/message/: decode.rs  mod.rs
gix-object/src/object/: mod.rs
gix-object/src/tag/: decode.rs  mod.rs  ref_iter.rs
gix-object/src/tree/: ref_iter.rs
gix-object/tests/object/: encode.rs  main.rs  tag.rs
gix-object/tests/object/commit/: from_bytes.rs  iter.rs  mod.rs
gix-object/tests/object/tree/: from_bytes.rs
gix-odb/: CHANGELOG.md  Cargo.toml
gix-pack/: CHANGELOG.md  Cargo.toml
gix-packetline/: Cargo.toml
gix-path/: Cargo.toml
gix-pathspec/: CHANGELOG.md  Cargo.toml
gix-prompt/: CHANGELOG.md  Cargo.toml
gix-protocol/: Cargo.toml
gix-quote/: Cargo.toml
gix-ref/: Cargo.toml
gix-ref/fuzz/: Cargo.toml
gix-ref/fuzz/fuzz_targets/: fuzz_packed_buffer.rs
gix-ref/src/: name.rs  parse.rs
gix-ref/src/store/file/: find.rs  overlay_iter.rs  packed.rs  raw_ext.rs
gix-ref/src/store/file/log/: line.rs
gix-ref/src/store/file/loose/: reflog.rs
gix-ref/src/store/file/loose/reference/: decode.rs
gix-ref/src/store/file/loose/reflog/create_or_update/: tests.rs
gix-ref/src/store/file/transaction/: prepare.rs
gix-ref/src/store/packed/: buffer.rs  decode.rs  find.rs  iter.rs  mod.rs  transaction.rs
gix-ref/src/store/packed/decode/: tests.rs
gix-ref/tests/: Cargo.toml
gix-ref/tests/fixtures/: make_pristine.sh  make_pseudo_ref_repository.sh  make_ref_repository.sh  make_repo_for_1850_repro.sh  make_repo_for_1928_repro.sh  make_worktree_repo.sh
gix-ref/tests/fixtures/generated-archives/: .gitignore  make_namespaced_packed_ref_repository_sha256.tar  make_packed_ref_repository_for_overlay_sha256.tar  make_packed_ref_repository_sha256.tar  make_packed_refs_for_lookup_rules_sha256.tar  make_pristine.tar  make_pristine_sha256.tar  make_pseudo_ref_repository.tar  make_pseudo_ref_repository_sha256.tar  make_ref_repository.tar  make_ref_repository_sha256.tar  make_repo_for_1850_repro.tar  make_repo_for_1850_repro_sha256.tar  make_repo_for_1928_repro.tar  make_repo_for_1928_repro_sha256.tar  make_repo_for_reflog_sha256.tar
gix-ref/tests/refs/: fullname.rs  main.rs  store.rs
gix-ref/tests/refs/file/: log.rs  mod.rs  reference.rs  worktree.rs
gix-ref/tests/refs/file/store/: find.rs  iter.rs  mod.rs  reflog.rs
gix-ref/tests/refs/file/transaction/: mod.rs
gix-ref/tests/refs/file/transaction/prepare_and_commit/: delete.rs
gix-ref/tests/refs/file/transaction/prepare_and_commit/create_or_update/: collisions.rs  mod.rs
gix-ref/tests/refs/packed/: find.rs  iter.rs  open.rs
gix-refspec/: CHANGELOG.md  Cargo.toml
gix-revision/: CHANGELOG.md  Cargo.toml
gix-revision/tests/revision/spec/parse/anchor/: at_symbol.rs  colon_symbol.rs  refnames.rs
gix-revwalk/: CHANGELOG.md  Cargo.toml
gix-revwalk/src/graph/: commit.rs  mod.rs
gix-sec/: CHANGELOG.md  Cargo.toml
gix-shallow/: CHANGELOG.md  Cargo.toml
gix-status/: CHANGELOG.md  Cargo.toml
gix-submodule/: CHANGELOG.md  Cargo.toml
gix-tempfile/: CHANGELOG.md  Cargo.toml
gix-trace/: CHANGELOG.md  Cargo.toml
(+69 files in other folders)
