lints.workspace = true

[package]
name = "gix-actor"
version = "0.41.0"
description = "A way to identify git actors"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
edition = "2021"
include = ["/src/**/*", "/LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = true

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "gix-date/serde"]

[dependencies]
gix-date = { version = "^0.15.3", path = "../gix-date" }
gix-error = { version = "^0.2.3", path = "../gix-error" }

bstr = { version = "1.12.0", default-features = false, features = [
    "std",
    "unicode",
] }
serde = { version = "1.0.114", optional = true, default-features = false, features = [
    "derive",
] }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.0.0"
gix-testtools = { path = "../tests/tools" }
gix-hash = { path = "../gix-hash" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
