lints.workspace = true

[package]
name = "gix-archive"
version = "0.32.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "archive generation from of a worktree stream"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["/src/**/*", "/LICENSE-*"]

[lib]
doctest = false

[features]
default = ["tar", "tar_gz", "zip"]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = ["gix-worktree-stream/sha1", "gix-object/sha1"]

## Enable the `tar` archive format. It has support for all information, except for object ids.
tar = ["dep:tar", "dep:gix-path"]
## Enable the `tar.gz` archive format.
tar_gz = ["tar", "dep:flate2"]

## Enable the `zip` archive format.
zip = ["dep:rawzip", "dep:flate2"]


[dependencies]
gix-worktree-stream = { version = "^0.32.0", path = "../gix-worktree-stream" }
gix-object = { version = "^0.60.0", path = "../gix-object" }
gix-path = { version = "^0.12.0", path = "../gix-path", optional = true }
gix-date = { version = "^0.15.3", path = "../gix-date" }

flate2 = { version = "1.1.9", optional = true, default-features = false, features = ["zlib-rs"] }
rawzip = { version = "0.4.3", optional = true }

gix-error = { version = "^0.2.3", path = "../gix-error" }
bstr = { version = "1.12.0", default-features = false }

tar = { version = "0.4.38", optional = true }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-odb = { path = "../gix-odb" }
gix-worktree = { path = "../gix-worktree", default-features = false, features = [
    "attributes",
] }
gix-hash = { path = "../gix-hash", features = ["sha1"] }
gix-attributes = { path = "../gix-attributes" }
gix-object = { path = "../gix-object" }
gix-filter = { path = "../gix-filter" }

[package.metadata.docs.rs]
all-features = true
features = ["sha1", "document-features"]
