lints.workspace = true

[package]
name = "gix-bitmap"
version = "0.3.1"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dedicated implementing the standard git bitmap format"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["/src/**/*", "/LICENSE-*"]

[lib]
doctest = true
test = true

[dependencies]
gix-error = { version = "^0.2.2", path = "../gix-error" }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
