lints.workspace = true

[package]
name = "gix-chunk"
version = "0.7.1"
description = "Interact with the git chunk file format used in multi-pack index and commit-graph files"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/GitoxideLabs/gitoxide"
documentation = "https://github.com/git/git/blob/seen/Documentation/technical/chunk-format.txt"
license = "MIT OR Apache-2.0"
edition = "2021"
include = ["/src/**/*", "/LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = true
test = false

[dependencies]
gix-error = { version = "^0.2.2", path = "../gix-error" }
