lints.workspace = true

[package]
name = "gix-config"
version = "0.56.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
description = "A git-config file parser and editor from the gitoxide project"
license = "MIT OR Apache-2.0"
authors = ["Edward Shen <code@eddie.sh>"]
edition = "2021"
keywords = ["git-config", "git", "config", "gitoxide"]
categories = ["config", "parser-implementations"]
include = ["/src/**/*", "/LICENSE-*", "/README.md"]
rust-version = "1.82"
autotests = false

[features]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = ["gix-ref/sha1"]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "gix-sec/serde", "gix-ref/serde", "gix-glob/serde", "gix-config-value/serde"]

[dependencies]
gix-features = { version = "^0.48.0", path = "../gix-features" }
gix-config-value = { version = "^0.18.0", path = "../gix-config-value" }
gix-path = { version = "^0.12.0", path = "../gix-path" }
gix-sec = { version = "^0.14.0", path = "../gix-sec" }
gix-ref = { version = "^0.63.0", path = "../gix-ref" }
gix-glob = { version = "^0.26.0", path = "../gix-glob" }

thiserror = "2.0.18"
unicode-bom = { version = "2.0.3" }
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
smallvec = "1.15.1"

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
criterion = "0.8.2"
gix-config = { path = ".", features = ["sha1"] }

[[bench]]
name = "large_config_file"
harness = false
path = "./benches/large_config_file.rs"

[package.metadata.docs.rs]
all-features = true
features = ["sha1", "document-features"]

[package.metadata.cargo-machete]
ignored = [
    # Public optional `serde` feature is retained for downstream feature compatibility.
    "serde",
]
