lints.workspace = true

[package]
name = "gix-dir"
version = "0.25.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing with directory walks"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["/src/**/*", "/LICENSE-*"]

[lib]
doctest = false
test = false

[features]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = ["gix-discover/sha1", "gix-index/sha1", "gix-object/sha1", "gix-worktree/sha1"]

[dependencies]
gix-trace = { version = "^0.1.19", path = "../gix-trace" }
gix-index = { version = "^0.51.0", path = "../gix-index" }
gix-discover = { version = "^0.51.0", path = "../gix-discover" }
gix-fs = { version = "^0.21.0", path = "../gix-fs" }
gix-path = { version = "^0.12.0", path = "../gix-path" }
gix-pathspec = { version = "^0.18.0", path = "../gix-pathspec" }
gix-worktree = { version = "^0.52.0", path = "../gix-worktree", default-features = false }
gix-object = { version = "^0.60.0", path = "../gix-object" }
gix-ignore = { version = "^0.21.0", path = "../gix-ignore" }
gix-utils = { version = "^0.3.2", path = "../gix-utils", features = ["bstr"] }

bstr = { version = "1.12.0", default-features = false }
thiserror = "2.0.18"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-fs = { path = "../gix-fs" }
pretty_assertions = "1.4.0"

[package.metadata.docs.rs]
features = ["sha1"]
