lints.workspace = true

[package]
name = "gix-filter"
version = "0.30.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project implementing git filters"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["/src/**/*", "/LICENSE-*"]

[lib]
doctest = false

[features]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = ["gix-hash/sha1", "gix-object/sha1"]

[dependencies]
gix-hash = { version = "^0.25.0", path = "../gix-hash" }
gix-trace = { version = "^0.1.19", path = "../gix-trace" }
gix-object = { version = "^0.60.0", path = "../gix-object" }
gix-command = { version = "^0.9.0", path = "../gix-command" }
gix-quote = { version = "^0.7.1", path = "../gix-quote" }
gix-utils = { version = "^0.3.2", path = "../gix-utils" }
gix-path = { version = "^0.12.0", path = "../gix-path" }
gix-packetline = { version = "^0.21.3", path = "../gix-packetline", features = ["blocking-io"] }
gix-attributes = { version = "^0.33.0", path = "../gix-attributes" }

encoding_rs = "0.8.32"
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
thiserror = "2.0.18"
smallvec = "1.15.1"


[dev-dependencies]
gix-hash = { path = "../gix-hash", features = ["sha1", "sha256"] }
gix-quote = { path = "../gix-quote" }
gix-testtools = { path = "../tests/tools" }
gix-worktree = { path = "../gix-worktree", default-features = false, features = ["attributes"] }

serial_test = { version = "3.4.0", default-features = false }

[package.metadata.docs.rs]
features = ["sha1"]
