lints.workspace = true

[package]
name = "gix-glob"
version = "0.26.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing with pattern matching"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["/src/**/*", "/LICENSE-*"]

[lib]
doctest = true

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "bitflags/serde"]

[dependencies]
gix-path = { version = "^0.12.0", path = "../gix-path" }
gix-features = { version = "^0.48.0", path = "../gix-features" }
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
bitflags = "2"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
