lints.workspace = true

[package]
name = "gix-hashtable"
version = "0.15.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate that provides hashtable based data structures optimized to utilize ObjectId keys"
authors = ["Pascal Kuthe <pascal.kuthe@semimod.de>"]
edition = "2021"
include = ["/src/**/*", "/LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = true

[features]
## Enable support for the SHA-1 hash by enabling the respective feature in the `gix-hash` crate.
sha1 = ["gix-hash/sha1"]

[dependencies]
parking_lot = "0.12.4"
hashbrown = { version = "0.16.0", default-features = false, features = ["inline-more"] }
gix-hash = { version = "^0.25.0", path = "../gix-hash" }

[dev-dependencies]
gix-hash = { path = "../gix-hash", features = ["sha1"] }

[package.metadata.docs.rs]
features = ["sha1"]
