# Modified for gitoxide from the upstream imara-diff crate.
# Upstream source: git cat-file -p 32d1e45d3df061e6ccba6db7fdce92db29e345d8:Cargo.toml

[package]
name = "gix-imara-diff"
version = "0.2.1"
edition = "2021"
authors = ["pascalkuthe <pascalkuthe@pm.me>", "Sebastian Thiel <sebastian.thiel@icloud.com>"]
rust-version = "1.71"
license = "Apache-2.0"

description = "A high performance library for computing diffs, maintained as a modified copy of upstream imara-diff for gitoxide."
repository = "https://github.com/GitoxideLabs/gitoxide"
keywords = ["diff", "difference", "myers", "compare", "changes"]
readme = "README.md"
include = ["/src/**/*", "/LICENSE", "/README.md", "!/src/tests.rs"]

[dependencies]
bstr = { version = "1.12.0", default-features = false }
hashbrown = { version = ">=0.15,<=0.16", default-features = false, features = ["default-hasher", "inline-more"] }

[features]
default = []
unified_diff = []

[dev-dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
gix-imara-diff = { path = ".", features = ["unified_diff" ] }
gix-hash = { version = "^0.25.0", path = "../gix-hash", features = ["sha1"] }
gix-object = { version = "^0.60.0", path = "../gix-object", features = ["sha1"] }
cov-mark = "2.1.0"
expect-test = "1.4.0"

# [[bench]]
# name = "git_repo"
# harness = false
