lints.workspace = true

[package]
name = "gix-index"
version = "0.51.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A work-in-progress crate of the gitoxide project dedicated implementing the git index file"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["/src/**/*", "/LICENSE-*", "/README.md"]
rust-version = "1.82"
autotests = false


[lib]
doctest = false
test = true

[features]
## Enable support for the SHA-1 hash by enabling the respective feature in the `gix-hash` crate.
sha1 = ["gix-hash/sha1"]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "smallvec/serde", "gix-hash/serde"]

[dependencies]
gix-features = { version = "^0.48.0", path = "../gix-features", features = [
    "progress",
] }
gix-hash = { version = "^0.25.0", path = "../gix-hash" }
gix-bitmap = { version = "^0.3.1", path = "../gix-bitmap" }
gix-object = { version = "^0.60.0", path = "../gix-object" }
gix-validate = { version = "^0.11.1", path = "../gix-validate" }
gix-traverse = { version = "^0.57.0", path = "../gix-traverse" }
gix-lock = { version = "^23.0.0", path = "../gix-lock" }
gix-fs = { version = "^0.21.0", path = "../gix-fs" }
gix-utils = { version = "^0.3.2", path = "../gix-utils" }

hashbrown = "0.16.0"
fnv = "1.0.7"
thiserror = "2.0.18"
memmap2 = "0.9.10"
filetime = "0.2.27"
bstr = { version = "1.12.0", default-features = false }

serde = { version = "1.0.114", optional = true, default-features = false, features = [
    "derive",
] }
smallvec = "1.15.1"
itoa = "1.0.17"
bitflags = "2"

document-features = { version = "0.2.0", optional = true }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.2", default-features = false, features = [
    "std",
    "fs",
] }
libc = { version = "0.2.182" }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-hash = { path = "../gix-hash", features = ["sha1", "sha256"] }

[package.metadata.docs.rs]
features = ["sha1", "document-features", "serde"]
