lints.workspace = true

[package]
name = "gix-mailmap"
version = "0.33.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project for parsing mailmap files"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["/src/**/*", "/LICENSE-*"]

[lib]
doctest = true

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "gix-actor/serde"]

[dependencies]
gix-actor = { version = "^0.41.0", path = "../gix-actor" }
gix-date = { version = "^0.15.3", path = "../gix-date" }
bstr = { version = "1.12.0", default-features = false, features = ["std", "unicode"] }
gix-error = { version = "^0.2.3", path = "../gix-error" }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
