[package]
name = "gix-merge"
version = "0.16.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project implementing merge algorithms"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["/src/**/*", "/LICENSE-*"]

[lints]
workspace = true

[lib]
doctest = false

[features]
## Enable support for the SHA-1 hash by enabling the respective feature in the `gix-hash` crate.
sha1 = ["gix-hash/sha1"]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "gix-hash/serde", "gix-object/serde"]

[dependencies]
gix-hash = { version = "^0.25.0", path = "../gix-hash" }
gix-object = { version = "^0.60.0", path = "../gix-object" }
gix-filter = { version = "^0.30.0", path = "../gix-filter" }
gix-worktree = { version = "^0.52.0", path = "../gix-worktree", default-features = false, features = ["attributes"] }
gix-command = { version = "^0.9.0", path = "../gix-command" }
gix-path = { version = "^0.12.0", path = "../gix-path" }
gix-fs = { version = "^0.21.0", path = "../gix-fs" }
gix-tempfile = { version = "^23.0.0", path = "../gix-tempfile" }
gix-trace = { version = "^0.1.19", path = "../gix-trace" }
gix-quote = { version = "^0.7.1", path = "../gix-quote" }
gix-revision = { version = "^0.45.0", path = "../gix-revision", default-features = false, features = ["merge_base"] }
gix-revwalk = { version = "^0.31.0", path = "../gix-revwalk" }
gix-diff = { version = "^0.63.0", path = "../gix-diff", default-features = false, features = ["blob"] }
gix-index = { version = "^0.51.0", path = "../gix-index" }
imara-diff = { package = "gix-imara-diff", version = "^0.2.1", path = "../gix-imara-diff" }

thiserror = "2.0.18"
bstr = { version = "1.12.0", default-features = false }
nonempty = "0.12.0"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-odb = { path = "../gix-odb" }
gix-utils = { path = "../gix-utils" }
termtree = "1.0.0"
pretty_assertions = "1.4.0"
arbitrary = { version = "1.4.2", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
features = ["sha1", "document-features"]

[package.metadata.cargo-machete]
ignored = [
    # Doc-only macro dependency used under `all(doc, feature = "document-features")`.
    "document-features",
    # Optional `serde` feature is retained for downstream API compatibility.
    "serde",
]
