lints.workspace = true

[package]
name = "gix-object"
version = "0.60.0"
description = "Immutable and mutable git objects with decoding and encoding support"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
edition = "2021"
include = ["/src/**/*", "/LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = true

[[bench]]
name = "decode-objects"
harness = false
path = "./benches/decode_objects.rs"

[[bench]]
name = "edit-tree"
harness = false
path = "./benches/edit_tree.rs"


[features]
## Enable support for the SHA-1 hash by enabling the respective feature in the `gix-hash` crate.
sha1 = ["gix-hash/sha1"]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = [
    "dep:serde",
    "bstr/serde",
    "smallvec/serde",
    "gix-hash/serde",
    "gix-actor/serde",
]
[dependencies]
gix-features = { version = "^0.48.0", path = "../gix-features", features = [
    "progress",
] }
gix-hash = { version = "^0.25.0", path = "../gix-hash" }
gix-hashtable = { version = "^0.15.0", path = "../gix-hashtable" }
gix-validate = { version = "^0.11.1", path = "../gix-validate" }
gix-actor = { version = "^0.41.0", path = "../gix-actor" }
gix-date = { version = "^0.15.3", path = "../gix-date" }
gix-utils = { version = "^0.3.2", path = "../gix-utils" }

itoa = "1.0.17"
thiserror = "2.0.18"
bstr = { version = "1.12.0", default-features = false, features = [
    "std",
    "unicode",
] }
smallvec = { version = "1.15.1", features = ["write"] }
serde = { version = "1.0.114", optional = true, default-features = false, features = [
    "derive",
] }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
criterion = "0.8.2"
pretty_assertions = "1.0.0"
insta = "1.46.3"
gix-testtools = { path = "../tests/tools" }
gix-odb = { path = "../gix-odb" }
gix-hash = { path = "../gix-hash", features = ["sha1", "sha256"] }
termtree = "1.0.0"

[package.metadata.docs.rs]
all-features = true
features = ["sha1", "document-features"]
