lints.workspace = true

[package]
name = "gix-pathspec"
version = "0.18.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing magical pathspecs"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["/src/**/*", "/LICENSE-*", "/README.md"]

[lib]
doctest = true

[dependencies]
gix-glob = { version = "^0.26.0", path = "../gix-glob" }
gix-path = { version = "^0.12.0", path = "../gix-path" }
gix-attributes = { version = "^0.33.0", path = "../gix-attributes" }
gix-config-value = { version = "^0.18.0", path = "../gix-config-value" }

bstr = { version = "1.12.0", default-features = false, features = ["std"] }
bitflags = "2"
thiserror = "2.0.18"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
serial_test = "3.4.0"
