lints.workspace = true

[package]
name = "gix-refspec"
version = "0.41.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project for parsing and representing refspecs"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["/src/**/*", "/LICENSE-*", "/README.md"]
rust-version = "1.82"

[lib]
doctest = true

[features]
## Enable support for the SHA-1 hash by enabling the respective feature in the `gix-hash` crate.
sha1 = ["gix-hash/sha1"]

[dependencies]
gix-error = { version = "^0.2.3", path = "../gix-error" }
gix-revision = { version = "^0.45.0", path = "../gix-revision", default-features = false }
gix-validate = { version = "^0.11.1", path = "../gix-validate" }
gix-hash = { version = "^0.25.0", path = "../gix-hash" }
gix-glob = { version = "^0.26.0", path = "../gix-glob" }

bstr = { version = "1.12.0", default-features = false, features = ["std"] }
thiserror = "2.0.18"
smallvec = "1.15.1"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-hash = { path = "../gix-hash", features = ["sha1", "sha256"] }
insta = "1.46.3"

[package.metadata.docs.rs]
features = ["sha1"]
