lints.workspace = true

[package]
name = "gix-revision"
version = "0.45.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing with finding names for revisions and parsing specifications"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["/src/**/*", "/LICENSE-*", "/README.md"]
rust-version = "1.82"

[lib]
doctest = false

[features]
default = ["describe", "merge_base"]
## Enable support for the SHA-1 hash by enabling the respective feature in the `gix-hash` crate.
sha1 = ["gix-hash/sha1"]

## `git describe` functionality
describe = ["dep:gix-trace", "dep:gix-hashtable"]

## `git merge-base` functionality
merge_base = ["dep:gix-trace", "dep:bitflags"]

## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "gix-hash/serde", "gix-object/serde"]

[dependencies]
gix-error = { version = "^0.2.3", path = "../gix-error" }
gix-hash = { version = "^0.25.0", path = "../gix-hash" }
gix-object = { version = "^0.60.0", path = "../gix-object" }
gix-date = { version = "^0.15.3", path = "../gix-date" }
gix-hashtable = { version = "^0.15.0", path = "../gix-hashtable", optional = true }
gix-revwalk = { version = "^0.31.0", path = "../gix-revwalk" }
gix-commitgraph = { version = "^0.37.0", path = "../gix-commitgraph" }
gix-trace = { version = "^0.1.19", path = "../gix-trace", optional = true }

bstr = { version = "1.12.0", default-features = false, features = ["std"] }
bitflags = { version = "2", optional = true }
nonempty = "0.12.0"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
insta = "1.46.3"
gix-odb = { path = "../gix-odb" }
gix-testtools = { path = "../tests/tools" }
permutohedron = "0.2.4"

[package.metadata.docs.rs]
all-features = true
features = ["sha1", "document-features"]
